	##### Run time #####
		* If you want work using lazy loading with LinFu.DynamicProxy now you must deploy NHibernate.ByteCode.LinFu.dll
		* If you want work using lazy loading with Castle.DynamicProxy2 now you must deploy NHibernate.ByteCode.Castle.dll
		* compatible only with .NET2.0 SP1 or above (System.DateTimeOffset)

	##### Possible Breaking Changes for external frameworks #####
		* ISession interface have additional methods
		* DefaultProxyFactoryFactory removed
		* IProxyFactoryFactory now provide the IProxyValidator implementation

	##### Initialization time #####
		* The ProxyValidator check for "internal virtual" (to be intercepted by proxy need "protected internal virtual")
		* The session-factory configuration property "proxyfactory.factory_class" is mandatory; You must choose one of the availables NHibernate.ByteCode

	##### Breaking Changes #####
		* see NH-1633 if you are using SQL native queries
		

Build 2.0.1.GA
========================
** Bug
    * [NH-1293] - Changed behavior of Filters for many-to-one  associations brings up possible bug when used with outer joins.
    * [NH-1464] - C++ and Dispose method
    * [NH-1466] - current_session_context_class = thread_static doesn't work
    * [NH-1473] - IsEqual and Compare broken in EntityType
    * [NH-1481] - Named Hql queries w/ Named Parameters broken after upgrade to 2.0 from 1.2.1
    * [NH-1483] - Subclass Not Loaded From Cache as Baseclass
    * [NH-1488] - Table per class hierarchy and OUTER JOIN
    * [NH-1490] - Wrong order of parameters in query when session uses IFilter
    * [NH-1492] - Parameter mismatch enabling filters
    * [NH-1499] - NullReferenceException construting Criteria query

** Improvement
    * [NH-1484] - first chance exception 'NHibernate.MappingException' when starting a webapplication
    * [NH-1496] - Configuration.AddAssembly(Assembly) should do some logging if no mapping files where found